--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
@@ -28,6 +29,7 @@
     "postcss-loader": "^6.2.1",
     "prettier": "^2.5.1",
     "svelte": "^3.45.0",
+    "svelte-carousel": "^1.0.17-rc4",
     "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.10.1",
     "tailwindcss": "^3.0.12",
@@ -36,8 +38,8 @@
     "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "devicon": "^2.14.0",
-    "firebase": "^9.6.2",
-    "svelte-carousel": "^1.0.17-rc4"
+    "firebase": "^9.6.2"
   }
 }
